# flexfoil

./: .gitignore  :00.bl  CD_OVERPREDICTION_FIX.md  CD_OVERPREDICTION_INVESTIGATION.md  CL_CALCULATION_BUG_ANALYSIS.md  Cargo.toml  JACOBIAN_STAGNATION_ANALYSIS.md  LICENSE  NEWTON_EXPLOSION_FIX.md  QUIT  README.md  REMARCH_FIX_TEST_RESULTS.md  THIRD_PARTY_NOTICES.md  TRANSITION_INVESTIGATION_RESULTS.md  TRANSITION_LOCATION_COMPARISON.md  UE_FIX_REPORT.md  VISCOUS_BL_INVESTIGATION_REPORT.md  XFOIL_IMPLEMENTATION_RULES.md  XFOIL_RUSTFOIL_ARCHITECTURE_AUDIT.md  XFOIL_RUSTFOIL_REMAINING_ARCHITECTURE_DIFFERENCES_REPORT.md  XFOIL_STATE_PARITY_IMPLEMENTATION_PLAN.md  check_amplification.py  cp_alpha4.txt  fort.77  naca0012_alpha4_dump.txt  package-lock.json  package.json  playwright.config.ts  rustfoil_buffer_debug.json  rustfoil_debug.json  rustfoil_debug_alpha0.json  test_remarch_a15.txt  test_remarch_a15_report.md  test_transition_alpha10.py  tsconfig.json  xfoil_comparison_script.txt  xfoil_dqdm.json  xfoil_inviscid_debug.json  xfoil_panel_geom.json  xfoil_polar.txt  (+4 more)
Xfoil-instrumented/: README.md
_snippets/: 2026-01-28.md  2026-01-28_Full_Session_Report.md  BL_Investigation_Plan.md  CRITICAL_STALL_BUG_FINDING.md  LSB_Investigation_Summary.md  Newton_BruteForce_Comparison_Plan.md  PSILIN_Port_Implementation_Plan.md  rustfoil-xfoil-methodology-comparison.md
comparison_results/: FINAL_COMPARISON_REPORT.md  FINAL_SUMMARY.md  INTERMEDIATE_VALUES_ANALYSIS.md  KEY_DISCREPANCIES_SUMMARY.md  alpha_sweep.json  alpha_sweep_comparison.json  comparison_summary.json  (+4 more)
crates/rustfoil-bl/: Cargo.toml
crates/rustfoil-bl/src/: constants.rs  debug.rs  equations.rs  lib.rs  state.rs
crates/rustfoil-bl/src/closures/: cf.rs  density.rs  dissipation.rs  hkin.rs  hs.rs  mod.rs  transition.rs
crates/rustfoil-bl/tests/: axset_comparison.rs  bldif_comparison.rs  bldif_trace.rs  blvar_comparison.rs  cf_check.rs  cfm_check.rs  dampl_comparison.rs  fortran_comparison.rs  ibl3_check.rs  laminar_bubble_bldif.rs  shape_jacobian_test.rs  trdif_half_bldif.rs  turbulent_transition_bldif.rs
crates/rustfoil-cfd/: Cargo.toml
crates/rustfoil-cfd/src/: boundary.rs  config.rs  init.rs  lib.rs  mesh.rs
crates/rustfoil-cfd/tests/: integration.rs
crates/rustfoil-cli/: Cargo.toml
crates/rustfoil-cli/src/: main.rs
crates/rustfoil-coupling/: Cargo.toml
crates/rustfoil-coupling/src/: dij.rs  global_newton.rs  lib.rs  march.rs  newton.rs  newton_state.rs  solve.rs  stmove.rs  update.rs  wake.rs
crates/rustfoil-coupling/tests/: ampl_debug.rs  amplification_comparison.rs  ctau_debug.rs  dampl_comparison.rs  initial_vs_final.rs  march_from_xfoil.rs  matrix_comparison.rs  mrchue_comparison.rs  mrchue_vs2_iter_compare.rs  n4412_bubble_bldif_probe.rs  newton_debug.rs  newton_station_29.rs  newton_vi_coupling.rs  single_newton_step.rs  single_surface_integration.rs  solver_debug.rs  solver_trace.rs  station_trace.rs  theta_evolution.rs  theta_transition_final.rs  trace_axset.rs  trace_dampl.rs  transition_bldif_compare.rs  transition_comparison.rs  transition_mrchue_iter_dump.rs  transition_trace.rs  transition_validation.rs  xfoil_mrchue_iter_compare.rs  xfoil_newton_comparison.rs  xfoil_setbl_comparison.rs  xfoil_trdif_comparison.rs
crates/rustfoil-inviscid/: Cargo.toml
crates/rustfoil-inviscid/examples/: generate_rustfoil_data.rs
crates/rustfoil-inviscid/fortran/: Makefile  generate_reference.py  test_inviscid.f
crates/rustfoil-inviscid/src/: error.rs  geometry.rs  influence.rs  lib.rs  solution.rs  stagnation.rs  system.rs
crates/rustfoil-inviscid/tests/: inviscid_debug.rs  test_cl_slope.rs  xfoil_comparison.rs
crates/rustfoil-python/: Cargo.toml
crates/rustfoil-python/src/: lib.rs
crates/rustfoil-solver/: Cargo.toml
crates/rustfoil-solver/examples/: mfoil_compare.rs  polar_gen.rs
crates/rustfoil-solver/plans/: viscous_accuracy_improvements.plan.md  xfoil_full_newton_coupling.plan.md
crates/rustfoil-solver/src/: error.rs  lib.rs  wake_interaction.rs
crates/rustfoil-solver/src/boundary_layer/: closure.rs  inverse.rs  laminar.rs  mod.rs  state.rs  transition.rs  turbulent.rs  wake.rs  xfoil_turb.rs
crates/rustfoil-solver/src/inviscid/: error.rs  influence.rs  mod.rs  smoke.rs  velocity.rs  wake_panels.rs
crates/rustfoil-solver/src/mfoil_bl/: closures.rs  mod.rs  residuals.rs  solver.rs  state.rs
crates/rustfoil-solver/src/viscous/: blsys.rs  circulation.rs  config.rs  coupling.rs  forces.rs  mod.rs  newton.rs  setup.rs  state.rs  viscal.rs
crates/rustfoil-solver/tests/: comprehensive_validation.rs  structural_viscous_parity.rs  test_station_mapping.rs  test_ue_viscous.rs  trace_station_gates.rs  ue_extract_dump.rs  validation.rs  xfoil_comparison.rs  xfoil_viscous_comparison.rs
crates/rustfoil-testkit/: Cargo.toml
crates/rustfoil-testkit/data/multi-element/30p30n/: config.json  source.txt
crates/rustfoil-testkit/data/multi-element/gaw1-fowler/: config.json  source.txt
crates/rustfoil-testkit/data/multi-element/naca0012-flat-flap/: geometry.json  thin_airfoil_cl.json
crates/rustfoil-testkit/data/multi-element/nlr7301-flap/: config.json  source.txt
crates/rustfoil-testkit/data/multi-element/two-cylinders/: geometry.json
crates/rustfoil-testkit/fortran/: Makefile  test_closures  test_closures.f
crates/rustfoil-testkit/src/: approx.rs  fortran_runner.rs  lib.rs  paths.rs  timing.rs
crates/rustfoil-wasm/: Cargo.toml
crates/rustfoil-wasm/src/: lib.rs
crates/rustfoil-xfoil/: Cargo.toml
crates/rustfoil-xfoil/src/: assembly.rs  canonical_state.rs  config.rs  error.rs  forces.rs  lib.rs  march.rs  mdes.rs  oper.rs  qdes.rs  result.rs  solve.rs  state.rs  state_ops.rs  update.rs  wake_panel.rs
crates/rustfoil-xfoil/tests/: march_parity.rs  newton_stage_parity.rs  parity_state_topology.rs  perf_state_topology.rs  qdes_parity.rs  qdes_workflow_gates.rs  support.rs  wake_parity.rs  workflow_gates.rs
crates/rustfoil-xfoil/tests/fortran/: mrchue_driver.f90  qdcalc_driver.f90  qdes_driver.f90  setbl_driver.f90  state_topology_driver.f90  viscal_driver.f90
(+407 files in other folders)
