[package]
name = "rustfoil-bl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustfoil-core = { path = "../rustfoil-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rustfoil-testkit = { path = "../rustfoil-testkit" }
approx = "0.5"
