[package]
name = "rustfoil-cfd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Structured mesh CFD solver support for RustFoil (mesh gen, initial conditions, BCs)"

[dependencies]
rustfoil-core = { path = "../rustfoil-core" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
