[package]
name = "rustfoil-inviscid"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "XFOIL-matching inviscid panel method solver"

[dependencies]
rustfoil-core = { path = "../rustfoil-core" }
rustfoil-bl = { path = "../rustfoil-bl" }
nalgebra = "0.33"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rustfoil-testkit = { path = "../rustfoil-testkit" }
approx = "0.5"
