[package]
name = "rustfoil-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Test infrastructure for comparing Rust BL implementations against XFOIL FORTRAN"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
approx = "0.5"
